--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -7,32 +7,8 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="utcc.nontchaiyakarn.nontrestautant.OrderActivity">
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:id="@+id/lintop"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="New Text"
-            android:id="@+id/textView"
-            android:textSize="@dimen/food"
-            android:textStyle="bold"
-            android:layout_weight="1"
-            android:layout_gravity="center_vertical" />
-
-        <Spinner
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/spinner"
-            android:layout_weight="1" />
-    </LinearLayout>
-
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/listView"
-        android:layout_below="@+id/lintop" />
+        android:id="@+id/listView" />
 </RelativeLayout>
