--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,30 +19,16 @@
             android:layout_width="@dimen/image"
             android:layout_height="@dimen/image"
             android:id="@+id/imageView"
-            android:src="@drawable/restaurant"
+            android:src="@drawable/icon_myaccount"
             android:layout_gravity="center_horizontal" />
 
-        <EditText
-            android:layout_width="@dimen/login"
-            android:layout_height="wrap_content"
-            android:id="@+id/editText"
-            android:layout_gravity="center_horizontal"
-            android:hint="User : "
-            android:layout_marginTop="20dp" />
-
-        <EditText
-            android:layout_width="@dimen/login"
-            android:layout_height="wrap_content"
-            android:id="@+id/editText2"
-            android:hint="Password : "
-            android:inputType="textPassword" />
     </LinearLayout>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="clickLogin"
-        android:text="LOGIN"
+        android:text="Go"
         android:id="@+id/button"
         android:layout_alignParentBottom="true" />
 </RelativeLayout>
